--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,10 @@
 video::cue {
-    font-size: 12pt;
+    font-size: 2pt;
   }
   
   /* Styling with UI. */
   .shaka-text-container {
-    color: red;
+    color: purple;
     font-size: 30px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
