--- a/public/style.css
+++ b/public/style.css
@@ -1,14 +1,22 @@
 video::cue {
-    font-size: 12pt;
+    font-size: 40px;
+    color: azure;
+    
+
   }
   
   /* Styling with UI. */
   .shaka-text-container {
     color: red;
     font-size: 30px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:cursive;
+    font-style: oblique;
+  
+
+    
 
   }
+  
   
   /* Styling with UI, only when fullscreen (may not be supported in some browsers). */
   .shaka-text-container:fullscreen {
